--- a/site/index.html
+++ b/site/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 col-sm-offset-2">
+          <div class="col-md-8 col-md-offset-2">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -36,9 +36,10 @@
             </div>
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
+                <li><a class="navbar-brand" href="/">jonathanWHITNEY</a></li>
                 <li id="linkAbout" class="active"><a href="#" data-section="About">About</a></li>
                 <li id="linkResume"><a href="#" data-section="Resume">Resume</a></li>
-                <li id="linkPortfolio"><a href="#" data-section="Portfolio">Portfolio</a></li>
+                <!--<li id="linkPortfolio"><a href="#" data-section="Portfolio">Portfolio</a></li>-->
               </ul>
             </div>
           </div>
@@ -57,6 +58,7 @@
           </div>
           <div class="row">
             <div class="col-sm-4">
+              <h5>About</h5>
               <p>Fast learning, self-motivated, and self-taught digital developer currently residing in Indiana. Experience with front and back end development and design, responsive web development and design, and building web applications.</p>
             </div>
             <div class="col-sm-4">
@@ -65,6 +67,7 @@
               </p>
             </div>
             <div class="col-sm-4">
+              <h5>Contact</h5>
               <a href="http://twitter.com/jwhitney64" class="icon icon-twitter" target="_blank">
                 <img src="assets/icons/icon-twitter.png" />
               </a>
@@ -93,7 +96,7 @@
       </div>
     </div>
 
-    <div id="sectionPortfolio" class="container wrapper">
+    <!--<div id="sectionPortfolio" class="container wrapper">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="row">
@@ -101,15 +104,7 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div id="sectionFooter" class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <p>Jonathan Whitney 2014</p>
-        </div>
-      </div>
-    </div>
+    </div>-->
 
     <!-- JavaScript -->
     <script src="assets/js/vendor/jquery.min.js"></script>
