--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="assets/images/favicon.png">
 
     <title>Jonathan Whitney | Digital Developer</title>
 
@@ -16,95 +16,91 @@
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/"><img src="assets/images/logo.png" /></a>
+                    </div>
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <li id="linkAbout" class="active"><a href="#" data-section="About">About</a></li>
+                            <li id="linkResume"><a href="#" data-section="Resume">Resume</a></li>
+                            <li id="linkPortfolio"><a href="#" data-section="Portfolio">Portfolio</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="collapse navbar-collapse">
-              <ul class="nav navbar-nav">
-                <li><a class="navbar-brand" href="/">jonathanWHITNEY</a></li>
-                <li id="linkAbout" class="active"><a href="#" data-section="About">About</a></li>
-                <li id="linkResume"><a href="#" data-section="Resume">Resume</a></li>
-                <!--<li id="linkPortfolio"><a href="#" data-section="Portfolio">Portfolio</a></li>-->
-              </ul>
-            </div>
-          </div>
         </div>
-      </div>
     </nav>
 
     <div id="sectionAbout" class="container wrapper">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="row">
-            <div class="col-xs-12 content">
-              <h1>Jonathan Whitney</h1>
-              <h4>Digital Developer</h4>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <h3>About</h3>
+                        <p>Fast learning, self-motivated, and self-taught digital developer currently residing in Indiana. Experience with front and back end development and design, responsive web development and design, and building web applications.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <p class="align-center">
+                            <img class="img-circle" src="assets/images/headshot.jpg" />
+                        </p>
+                    </div>
+                    <div class="col-sm-4 contact">
+                        <h3>Contact</h3>
+                        <p>
+                            <a href="http://twitter.com/jwhitney64" class="icon icon-twitter" target="_blank">
+                                <img src="assets/icons/icon-twitter.png" />
+                            </a>
+                            <a href="http://linkedin.com/in/jonathanawhitney" class="icon icon-linkedin" target="_blank">
+                                <img src="assets/icons/icon-linkedin.png" />
+                            </a>
+                            <a href="http://github.com/jawhitney" class="icon icon-github" target="_blank">
+                                <img src="assets/icons/icon-github.png" />
+                            </a>
+                            <a href="mailto:jonathan.a.whitney@gmail.com" class="icon icon-email">
+                                <img src="assets/icons/icon-email.png" />
+                            </a>
+                        </p>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-4">
-              <h5>About</h5>
-              <p>Fast learning, self-motivated, and self-taught digital developer currently residing in Indiana. Experience with front and back end development and design, responsive web development and design, and building web applications.</p>
-            </div>
-            <div class="col-sm-4">
-              <p class="align-center">
-                <img src="assets/images/me.jpg" />
-              </p>
-            </div>
-            <div class="col-sm-4">
-              <h5>Contact</h5>
-              <a href="http://twitter.com/jwhitney64" class="icon icon-twitter" target="_blank">
-                <img src="assets/icons/icon-twitter.png" />
-              </a>
-              <a href="http://linkedin.com/in/jonathanawhitney" class="icon icon-linkedin" target="_blank">
-                <img src="assets/icons/icon-linkedin.png" />
-              </a>
-              <a href="http://github.com/jawhitney" class="icon icon-github" target="_blank">
-                <img src="assets/icons/icon-github.png" />
-              </a>
-              <a href="mailto:jonathan.a.whitney@gmail.com" class="icon icon-email">
-                <img src="assets/icons/icon-email.png" />
-              </a>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
 
     <div id="sectionResume" class="container wrapper">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="row">
-            <div class="col-xs-12 content"></div>
-          </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="row">
+                    <div class="col-xs-12 content"></div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
-    <!--<div id="sectionPortfolio" class="container wrapper">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="row">
-            <div class="col-xs-12 content">Portfolio</div>
-          </div>
+    <div id="sectionPortfolio" class="container wrapper">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="row">
+                    <div class="col-xs-12 content">Portfolio</div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>-->
+    </div>
 
     <!-- JavaScript -->
     <script src="assets/js/vendor/jquery.min.js"></script>
@@ -114,50 +110,78 @@
     <script src="assets/js/data.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script id="templateResume" type="text/x-handlebars-template">
-      {{#each entries}}
-        <h3>{{heading}}</h3>
-        {{#each content}}
-          {{#if heading}}
-            <h4>{{heading}}</h4>
-          {{/if}}
-          {{#if subheading}}
-            <h5>{{subheading}}</h5>
-          {{/if}}
-          {{#each text}}
-            <p>{{this}}</p>
-          {{/each}}
-          {{#if list}}
-            <ul>
-              {{#each list}}
-                <li>{{this}}</li>
-              {{/each}}
-            </ul>
-          {{/if}}
-          {{#if ratings}}
-            <div class="row">
-              {{#each ratings}}
-                <div class="col-md-6">
-                  <div class="row">
-                    <div class="col-xs-6">
-                      {{item}}
+        {{#each entries}}
+            <h3>{{heading}}</h3>
+            {{#each content}}
+                {{#if heading}}
+                    <h4>{{heading}}</h4>
+                {{/if}}
+                {{#if subheading}}
+                    <h5>{{subheading}}</h5>
+                {{/if}}
+                {{#each text}}
+                    <p>{{this}}</p>
+                {{/each}}
+                {{#if list}}
+                    <ul>
+                        {{#each list}}
+                            <li>{{this}}</li>
+                        {{/each}}
+                    </ul>
+                {{/if}}
+                {{#if ratings}}
+                    <div class="row">
+                        {{#each ratings}}
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        {{item}}
+                                    </div>
+                                    <div class="col-xs-6 align-right">
+                                        {{stars rating}}
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
                     </div>
-                    <div class="col-xs-6 align-right">
-                      {{stars rating}}
-                    </div>
-                  </div>
-                </div>
-              {{/each}}
-            </div>
-          {{/if}}
-          {{#if links}}
-            <ul>
-            {{#each links}}
-              <li>{{link url text description}}</li>
+                {{/if}}
+                {{#if links}}
+                    <ul>
+                        {{#each links}}
+                            <li>{{link url text description}}</li>
+                        {{/each}}
+                    </ul>
+                {{/if}}
             {{/each}}
-            </ul>
-          {{/if}}
         {{/each}}
-      {{/each}}
     </script>
-  </body>
+    <script id="templatePortfolio" type="text/x-handlebars-template">
+        {{#each entries}}
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><a href="{{url}}" target="_blank">{{title}}</a></h3>
+                        </div>
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-sm-5">
+                                    <h4>My Roles:</h4>
+                                    <ul>
+                                        {{#each roles}}
+                                            <li>{{this}}</li>
+                                        {{/each}}
+                                    </ul>
+                                </div>
+                                <div class="col-sm-7">
+                                    <img src="assets/images/{{screenshot}}" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {{/each}}
+    </script>
+</body>
 </html>
